--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #181818;
 }
 
 a {
@@ -13,6 +14,11 @@ a {
 
 * {
   box-sizing: border-box;
-  background-color: #181818;
   color: white;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
